# Smokin

./: CMakeLists.txt  README.md  Readme.md  smokin.sln
AviManager/: Avi.cpp  Avi.h  AviManager.vcproj
AviManager/ffmpegWin32/lib/: avcodec-51.lib  avformat-51.lib  avutil-49.lib  swscale-0.lib
Exception/: BaseExceptions.h  Exception.cpp  Exception.h  Exception.vcproj  SmokinException.cpp
FileUtil/: FileUtil.cpp  FileUtil.h  FileUtil.vcproj
Filter/: CircularBuffer.h  Connector.cpp  Connector.h  Filter.cpp  Filter.h  Filter.vcproj  RandomConnector.h  SmokinFilter.cpp
Filter/NewranLib/: include.h
MemoryPool/: MemoryPool.cpp  MemoryPool.h  MemoryPool.vcproj  SmokinMemoryPool.cpp
OpenGLShader/: OpenGLShader.cpp  OpenGLShader.h  OpenGLShader.vcproj
PerformanceAnalyzer/: DataAnalyzer.h  PerformanceAnalyzer.cpp  PerformanceAnalyzer.h  PerformanceAnalyzer.vcproj  SmokinPerformanceAnalyzer.cpp  Timer.cpp  Timer.h
Pointer/: Pointer.vcproj  SharedPointer.h  SmokinPointer.cpp
Shouter/: AcmDecoder.cpp  AcmDecoder.h  DirectWaveOut.cpp  DirectWaveOut.h  MasterVolumeControl.cpp  MasterVolumeControl.h  Shouter.vcproj  SmokinShouter.cpp  SoundShouter.cpp  SoundShouter.h
String/: SmokinString.cpp  String.cpp  String.h  String.vcproj
SystemTimer/: SystemTimer.cpp  SystemTimer.h  SystemTimer.vcproj
Xml/: SmokinXml.cpp  Xml.vcproj  XmlSerialization.cpp  XmlSerialization.h  dump.xml  tinyxml.h
examples/: opticalflow.cpp  panorama.cpp
shared/include/GL/: glew.h
shared/source/GL/: glew.c
smk/: CommandLine.cpp  CommandLine.hpp  File.cpp  File.hpp  Lang.cpp  Lang.hpp  Log.cpp  Log.hpp  Text.cpp  Text.hpp  Timer.cpp  Timer.hpp  UnitTest.cpp  UnitTest.hpp
smk/audio/: Audio.cpp  Audio.hpp  CircularBuffer.hpp  Recorder.cpp  Recorder.hpp  Wav.cpp  Wav.hpp
smk/math/: BoundingVolume.hpp  Easing.cpp  Easing.hpp  Mathematics.cpp  Mathematics.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  RunningStats.hpp  Vector.hpp
smk/threading/: Barrier.hpp  WaitEvent.hpp  WorkQueue.cpp  WorkQueue.hpp  Worker.cpp  Worker.hpp
smk/vision/: Drawing.cpp  Drawing.hpp  Features.cpp  Features.hpp  Filter.cpp  Filter.hpp  Image.cpp  Image.hpp  Mat.cpp  Mat.hpp  Opticalflow.cpp  Opticalflow.hpp  Optimization.cpp  Optimization.hpp
test/: File.cpp  Mathematics.cpp  Tester.cpp  Text.cpp  Timer.cpp  Vision.cpp
test/data/File/: utf8.txt
